<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login_Activity">

    <TextView
        android:id="@+id/text_Bick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageView
        android:id="@+id/image_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/bike"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@+id/text_Bick"
        app:layout_constraintVertical_bias="0.07999998"
        />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/design"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:imeOptions="actionDone"
        android:maxLength="10"
        android:padding="10dp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_Login"
        app:layout_constraintVertical_bias="0.16000003" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttonbackgroundnew"
        android:padding="20dp"
        android:text="@string/hint1"
        android:textColor="@android:color/background_light"
        app:layout_constraintTop_toBottomOf="@+id/edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintVertical_bias="0.19" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:indeterminateTint="@android:color/holo_orange_dark"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/image_Login"
        app:layout_constraintEnd_toEndOf="@+id/image_Login"
        app:layout_constraintStart_toStartOf="@+id/image_Login"
        app:layout_constraintTop_toTopOf="@+id/image_Login" />


</androidx.constraintlayout.widget.ConstraintLayout>

